# 6502_run

./: .gitignore  CMakeLists.txt  README.md
include/: emulator.h  opcodes.h
src/: 6502_run.c  emulator.c  emulator.h  opcodes.c  opcodes.h
tests/: util_tests.c
